--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "bootstrap-material-design": "^4.1.3",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "jquery": "^3.5.1"
   }
 }
