--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "bootstrap-material-design": "^4.1.3",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "swiper": "^6.2.0"
   }
 }
